--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </div>
 
     <header class="header">
-        <div class="logo">WEBDEVTEACH</div>
+        <div class="logo"><a href="https://saadsindhi7861.github.io/WEBDEVTEACHFINAL/">WEBDEVTEACH</a></div>
         <nav class="navbar">
             <ul>
                 <li><a href="#form">Payment Form</a></li>
